# unicom

./: .gitignore  .gitingore  .readthedocs.yaml  LICENSE  README.md  eval.sh  infer.py  partial_fc.py  pyproject.toml  retrieval.py  setup.py
.github/workflows/: reademe-contributors.yml
dataset/: __init__.py  base.py  cub.py  inaturalist.py
docs/: MLCD.md  MLCD_Embodied.md  UNICOM.md  requirements.txt
docs/source/: MLCD_Embodied.md  README.md  conf.py  requirements.txt
docs/source/downstream/: README.md
docs/source/mlcd/: MLCD_Embodied.md  README.md
docs/source/unicom/: README.md
downstream/: README.md
downstream/eval/eval/: evaluate_refcoco.py  model_vqa_refcoco.py
downstream/eval/script/: eval_multiprocess.sh  eval_refcoco.sh
downstream/llava/: constants.py
downstream/llava/benchmark/: data_robo.py
downstream/llava/model/: __init__.py  builder.py  llava_arch.py
downstream/llava/model/multimodal_encoder/: builder.py
downstream/llava/model/sam/: build_sam.py
downstream/llava/trl/trainer/: ppo_config.py
downstream/scripts/: finetune_mlcd_onlyseg.sh
examples/: retrieval.md
launch/: launch.json
llava/benchmark/: data.py  data_generative.py  data_robo.py  eval.py  eval_generative.py  eval_robo.py  make_openeqa_bmk.py  make_robovqa_bmk.py
llava/model/: builder.py  llava_arch.py
llava/model/language_model/: llava_qwen.py
llava/model/multimodal_encoder/: builder.py  mlcd_encoder.py  vit_2drope_open_clip.py
llava/model/multimodal_encoder/mlcd/: vit_rope2d_hf.py
llava/train/: llava_trainer.py  train.py
mlcd/: MLCD_Embodied.md  README.md  __init__.py  convert_vit_bigG_14_rope2d_to_hf.py  convert_vit_rope2d_to_hf.py  vision_transformer.py  vision_transformer_2d_rope.py  vit_rope2d.py
mlcd_vl/: README.md  dockerfile  eval_llava.sh  requirements.txt
mlcd_vl/downstream/: README.md
mlcd_vl/downstream/eval/eval/: model_vqa_refcoco.py
mlcd_vl/downstream/llava/model/language_model/: llava_qwen.py
mlcd_vl/downstream/llava/model/sam/: __init__.py
mlcd_vl/downstream/llava/train/: llava_trainer.py  train.py
mlcd_vl/llava/model/: __init__.py  builder.py  llava_arch.py
mlcd_vl/llava/model/multimodal_encoder/: builder.py  mlcd_encoder.py
mlcd_vl/llava/train/: llava_trainer.py
mlcd_vl/scripts/: finetune_clip.sh  finetune_mlcd.sh  pretrain_clip.sh  pretrain_mlcd.sh
mlcd_vl/scripts/eval/: compute_scores.py  robo_metric.py
scripts/: finetune_clip.sh  finetune_mlcd.sh  finetune_ov.sh  inat_vit_b_16.sh  inshop_vit_b_16.sh  inshop_vit_l_14.sh  pretrain_clip.sh  pretrain_mlcd.sh  sop_vit_l_14.sh
scripts/eval/: compute_scores.py  eval_all.sh  eval_robo.sh  generative_metric.py  openeqa_gpt4_score.py  robo_metric.py
scripts/exp/: direct_finetune.sh  pretrain.sh  resume_finetune.sh
scripts/unicom/: sop_vit_b_16.sh  sop_vit_l_14_336px.sh
scripts/unicom_qwen/: finetune_clip.sh  finetune_mlcd.sh  finetune_siglip.sh  pretrain_clip.sh  pretrain_mlcd.sh  pretrain_siglip.sh
unicom/: README.md  convert_google_landmark2dali.py  finetune_GLDv2.py  knn.py  model.py  retrieval.py
unicom/data/: README.md
unicom/dataset/: Inshop.py  SOP.py  cars.py  google_landmark.py  google_landmark_dali.py
unicom/scripts/: inat_vit_l_14.sh  inshop_vit_l_14_336px.sh  sop_vit_b_16.sh  sop_vit_b_32.sh
unicom/unicom/: __init__.py  vision_transformer.py
